src/test/deca/context/valid/created/decl-bool-var.deca
//Description :
// Declaration d'une variable bool avec initalisation
//
// Resultats :
// 


{
    boolean x = true;
}
