src/test/deca/context/invalid/created/decl-string-var.deca
//Description :
// Declaration d'une variable string avec initalisation
//
// Resultats :
// Erreur


{
    string x = "Bjr";
}
